--- a/Style.css
+++ b/Style.css
@@ -13,15 +13,19 @@ body {
     overflow-x: hidden;
 }
 
+/* Navbar Styles */
 .nav-bar {
     background-color: rgba(100, 99, 98, 0.537);
     height: 55px;
     width: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
     border-radius: 20px;
     position: fixed;
-    z-index: 1;
+    top: 0;
+    z-index: 100;
 }
 
 .nav-bar-list {
@@ -31,11 +35,10 @@ body {
     color: rgba(255, 217, 0, 0.747);
     display: flex;
     justify-content: space-around;
-    text-align: center;
     align-items: center;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 1;
 }
 
 .nav-bar-list a {
@@ -54,6 +57,7 @@ body {
     color: white;
 }
 
+/* Below Navbar Section */
 #below-below-navbar {
     background-color: black;
     height: 550px;
@@ -61,18 +65,20 @@ body {
     padding-top: 70px; /* Adjust for navbar space */
 }
 
+/* Hero Section */
 .Chose-us {
     color: white;
     font-size: 40px;
     margin-top: 70px;
-    padding: 70px;
+    padding: 20px;
 }
 
 .necessity {
     display: flex;
-    justify-content: space-around;
-    padding: 20px;
+    justify-content: space-between;
     flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
 }
 
 .necessity-content,
@@ -80,11 +86,13 @@ body {
 .necessity-content-3 {
     background-color: white;
     height: 190px;
-    width: 340px;
+    width: 30%;
     align-content: center;
     border-radius: 30px;
     margin: 10px;
     text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .below-below-navbar-2 {
@@ -94,12 +102,14 @@ body {
     opacity: 0.8;
 }
 
+/* Achievement Section */
 .Achievement {
     height: 300px;
     background-color: black;
     justify-content: center;
 }
 
+/* Item Card Styling */
 .Items {
     height: 100px;
     width: 300px;
